# seed-vfa-validation-reanalysis

./: AGENTS.md  CLAUDE.md  EXPECTED_RESULTS.md  LICENSE  README.md  config.yaml  progetto_paper_seed_vfa-0.1.md  progetto_paper_seed_vfa-0.2.md  progetto_paper_seed_vfa-v0_3.md  pyproject.toml  run_output.txt
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: Seed_Dataset_analysis.xlsx
data/processed/: seed_clean.csv  seed_with_groups.csv
data/raw/: Seed_Dataset.csv
results/predictions/: all_predictions.csv
results/tables/: effective_sfr.csv  importance_stability.csv  leakage_audit.csv  model_metrics.csv  noise_floor.csv  published_numbers_sidebar.csv  table_D_per_membrane.csv
rules/: python_research.md  scientific_writing.md
scripts/: check_expected.py  make_figures.py  run_data_audit.py  run_effective_sfr.py  run_identifiability.py  run_noise_floor.py  run_protocol_sweep.py  run_table_d.py
src/seed_vfa/: config.py  data.py  diagnostics.py  evaluation.py  features.py  groups.py  importance.py  models.py  noise_floor.py  plotting.py  splits.py
tests/: test_expected_results.py  test_features.py  test_groups.py  test_importance.py  test_metrics.py  test_models.py  test_no_leakage.py  test_noise_floor.py  test_splits.py
